<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bienvenida"
    android:background="#24acc2">

    <TextView
        android:id="@+id/textView68"
        android:layout_width="645dp"
        android:layout_height="183dp"
        android:layout_marginTop="4dp"
        android:text="@string/mensaje_de_bienvenida"
        android:textAlignment="center"
        android:textColor="#494646"
        android:textSize="20sp"
        android:textStyle="normal"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@color/mi_color_de_barra"
        app:layout_constraintBottom_toTopOf="@+id/btn_entendido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView67"
        app:layout_constraintVertical_bias="0.34"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:text="@string/bienvenid_a_hetica"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/btn_entendido"
        android:layout_width="148dp"
        android:layout_height="67dp"
        android:text="@string/entendido"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>