<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AsignaturaGustar"
    android:background="#24acc2">

    <TextView
        android:id="@+id/textView43"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/String_asignatura_gustar"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <ListView
        android:id="@+id/listViewDificil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@color/mi_color_de_barra"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView43"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="202dp"
        android:layout_height="34dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="28dp"
        android:colorControlActivated="#FFFFFF"
        android:progressTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listViewDificil"
        app:layout_constraintStart_toStartOf="parent" />
        <!--    app:layout_constraintEnd_toStartOf="@+id/listViewSiguiente"-->

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="8dp"
        android:text="@string/String_30_minutos"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@+id/listViewDificil"
        app:layout_constraintStart_toStartOf="parent" />
        <!--        app:layout_constraintEnd_toStartOf="@+id/listViewSiguiente"-->

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="8dp"
        android:text="@string/String_click_asignatura"
        android:textColor="#FFFFFF"
        android:textSize="27dp"
        app:layout_constraintBottom_toTopOf="@+id/textView45"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button37"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="pasar"
        android:text="@string/String_hecho"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewDificil" />
        <!--        app:layout_constraintTop_toBottomOf="@+id/listViewSiguiente"-->

</androidx.constraintlayout.widget.ConstraintLayout>